--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">MVC Movies</h1>
+    <p class="lead">Aplicação Web para aprendizagem do .Net Core e tecnologias relacionadas</p>
+  </div>
+</div>
